# notepad-local

./: .env.development.example  .env.example  .env.production.example  CNAME  Cargo.toml  Dockerfile  README.md  V2_MIGRATION.md  api.sh  env.example  migrate.sql  script.js
frontend/: index.html  script.js  style.css
src/: auth.rs  content.rs  db.rs  lib.rs  main.rs  models.rs  notes.rs  state.rs  utils.rs
src/logging/: middleware.rs  mod.rs
