[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.15.1"
axum = { version = "0.8.6", features = ["http2", "macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "mysql", "macros", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.11.0", features = ["v4"] }
